src/iMOABF.F90


      integer(c_int) function iMOAB_GetElementID(pid, global_block_ID, num_elements_in_block, &
                                                global_element_ID, local_element_ID) bind(C, name='iMOAB_GetElementID')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: global_block_ID
        integer(c_int), intent(in) :: num_elements_in_block
        integer(c_int), intent(in) :: global_element_ID
        integer(c_int), intent(out) :: local_element_ID
      end function iMOAB_GetElementID

      integer(c_int) function iMOAB_GetPointerToSurfaceBC(pid, surface_BC_length, local_element_ID, &
                                                          reference_surface_ID, boundary_condition_value) &
                                                          bind(C, name='iMOAB_GetPointerToSurfaceBC')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: surface_BC_length
        integer(c_int), intent(in) :: local_element_ID
        integer(c_int), intent(in) :: reference_surface_ID
        integer(c_int), intent(out) :: boundary_condition_value
      end function iMOAB_GetPointerToSurfaceBC

      integer(c_int) function iMOAB_GetPointerToVertexBC(pid, vertex_BC_length, local_vertex_ID, &
                                                        boundary_condition_value) bind(C, name='iMOAB_GetPointerToVertexBC')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: vertex_BC_length
        integer(c_int), intent(in) :: local_vertex_ID
        integer(c_int), intent(out) :: boundary_condition_value
      end function iMOAB_GetPointerToVertexBC

      ! tag_index is documented \param[out] in moab/iMOAB.h and the
      ! implementation only ever assigns to it, so it must not be intent(in):
      ! an intent(in) dummy is copy-in only, and the value C writes through the
      ! pointer is then free to be discarded.
      integer(c_int) function iMOAB_DefineTagStorage_c(pid, tag_storage_name, tag_type, components_per_entity, &
                                                    tag_index) bind(C, name='iMOAB_DefineTagStorage')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: tag_type
        integer(c_int), intent(in) :: components_per_entity
        integer(c_int), intent(out) :: tag_index
      end function iMOAB_DefineTagStorage_c

      integer(c_int) function iMOAB_SetIntTagStorage_c(pid, tag_storage_name, num_tag_storage_length, entity_type, &
                                                    tag_storage_data) bind(C, name='iMOAB_SetIntTagStorage')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: num_tag_storage_length
        integer(c_int), intent(in) :: entity_type
        integer(c_int), intent(in) :: tag_storage_data(*)
      end function iMOAB_SetIntTagStorage_c

      integer(c_int) function iMOAB_GetIntTagStorage_c(pid, tag_storage_name, num_tag_storage_length, entity_type, &
                                                     tag_storage_data) bind(C, name='iMOAB_GetIntTagStorage')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: num_tag_storage_length
        integer(c_int), intent(in) :: entity_type
        integer(c_int), intent(out) :: tag_storage_data(*)
      end function iMOAB_GetIntTagStorage_c

      integer(c_int) function iMOAB_SetDoubleTagStorage_c(pid, tag_storage_name, num_tag_storage_length, entity_type, &
                                                        tag_storage_data) bind(C, name='iMOAB_SetDoubleTagStorage')
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_double
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: num_tag_storage_length
        integer(c_int), intent(in) :: entity_type
        real(c_double), intent(in) :: tag_storage_data(*)
      end function iMOAB_SetDoubleTagStorage_c

      integer(c_int) function iMOAB_SetDoubleTagStorageWithGid_c(pid, tag_storage_name, num_tag_storage_length, entity_type, &
                                         tag_storage_data, globalIds) bind(C, name='iMOAB_SetDoubleTagStorageWithGid')
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_double
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: num_tag_storage_length
        integer(c_int), intent(in) :: entity_type
        real(c_double), intent(in) :: tag_storage_data(*)
        integer(c_int), intent(in) :: globalIds(*)
      end function iMOAB_SetDoubleTagStorageWithGid_c


      integer(c_int) function iMOAB_GetDoubleTagStorage_c(pid, tag_storage_name, num_tag_storage_length, entity_type, &
                                                        tag_storage_data) bind(C, name='iMOAB_GetDoubleTagStorage')
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_double
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer(c_int), intent(in) :: num_tag_storage_length
        integer(c_int), intent(in) :: entity_type
        real(c_double), intent(out) :: tag_storage_data(*)
      end function iMOAB_GetDoubleTagStorage_c

      integer(c_int) function iMOAB_SynchronizeTags(pid, num_tag, tag_indices, entity_type) bind(C, name='iMOAB_SynchronizeTags')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: num_tag
        integer(c_int), intent(in) :: tag_indices(*)
        integer(c_int), intent(in) :: entity_type(*)
      end function iMOAB_SynchronizeTags

      integer(c_int) function iMOAB_ReduceTagsMax(pid, tag_index, entity_type) bind(C, name='iMOAB_ReduceTagsMax')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: tag_index
        integer(c_int), intent(in) :: entity_type
      end function iMOAB_ReduceTagsMax

      integer(c_int) function iMOAB_GetNeighborElements(pid, local_index, num_adjacent_elements, adjacent_element_IDs) &
                              bind(C, name='iMOAB_GetNeighborElements')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: local_index
        integer(c_int), intent(inout) :: num_adjacent_elements
        integer(c_int), intent(out) :: adjacent_element_IDs(*)
      end function iMOAB_GetNeighborElements

      integer(c_int) function iMOAB_GetNeighborVertices(pid, local_index, num_adjacent_vertices, adjacent_vertex_IDs) &
                              bind(C, name='iMOAB_GetNeighborVertices')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: local_index
        integer(c_int), intent(out) :: num_adjacent_vertices
        integer(c_int), intent(out) :: adjacent_vertex_IDs
      end function iMOAB_GetNeighborVertices

      integer(c_int) function iMOAB_SetGlobalInfo(pid, num_global_verts, num_global_elems) bind(C, name='iMOAB_SetGlobalInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: num_global_verts
        integer(c_int), intent(in) :: num_global_elems
      end function iMOAB_SetGlobalInfo

      integer(c_int) function iMOAB_GetGlobalInfo(pid, num_global_verts, num_global_elems) bind(C, name='iMOAB_GetGlobalInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(out) :: num_global_verts
        integer(c_int), intent(out) :: num_global_elems
      end function iMOAB_GetGlobalInfo

  integer(c_int) function iMOAB_WriteLocalMesh_c(pid, prefix) bind(C, name='iMOAB_WriteLocalMesh')
    use, intrinsic :: iso_c_binding, only : c_int, c_char
    integer(c_int), intent(in) :: pid
    character(kind=c_char), intent(in) :: prefix(*)
  end function iMOAB_WriteLocalMesh_c

#ifdef MOAB_HAVE_MPI

      integer(c_int) function iMOAB_SendMesh(pid, joint_comm, receivingGroup, rcompid, method) bind(C, name='iMOAB_SendMesh')
        use, intrinsic :: iso_c_binding, only: c_int, c_ptr
        integer(c_int), intent(in) :: pid
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer, intent(in) :: receivingGroup ! MPI_Group
        integer(c_int), intent(in) :: rcompid
        integer(c_int), intent(in) :: method
      end function iMOAB_SendMesh

      integer(c_int) function iMOAB_ReceiveMesh(pid, joint_comm, sendingGroup, scompid) bind(C, name='iMOAB_ReceiveMesh')
        use, intrinsic :: iso_c_binding, only: c_int, c_ptr
        integer(c_int), intent(in) :: pid
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer, intent(in) :: sendingGroup ! MPI_Group
        integer(c_int), intent(in) :: scompid
      end function iMOAB_ReceiveMesh

      integer(c_int) function iMOAB_FreeSenderBuffers(pid, context_id) bind(C, name='iMOAB_FreeSenderBuffers')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: context_id
      end function iMOAB_FreeSenderBuffers

      integer(c_int) function iMOAB_SendElementTag_c(pid, tag_storage_name, joint_comm, context_id) &
                              bind(C, name='iMOAB_SendElementTag')
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_ptr
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer(c_int), intent(in) :: context_id
      end function iMOAB_SendElementTag_c

      integer(c_int) function iMOAB_ReceiveElementTag_c(pid, tag_storage_name, joint_comm, context_id) &
                              bind(C, name='iMOAB_ReceiveElementTag')
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_ptr
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: tag_storage_name(*)
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer(c_int), intent(in) :: context_id
      end function iMOAB_ReceiveElementTag_c

      integer(c_int) function iMOAB_ComputeCommGraph(pid1, pid2, joint_comm, group1, group2, type1, type2, &
                                                     comp1, comp2) bind(C, name='iMOAB_ComputeCommGraph')
        use, intrinsic :: iso_c_binding, only: c_int, c_ptr
        integer(c_int), intent(in) :: pid1
        integer(c_int), intent(in) :: pid2
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer, intent(in) :: group1     ! MPI_Group
        integer, intent(in) :: group2     ! MPI_Group
        integer(c_int), intent(in) :: type1
        integer(c_int), intent(in) :: type2
        integer(c_int), intent(in) :: comp1
        integer(c_int), intent(in) :: comp2
      end function iMOAB_ComputeCommGraph
